<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/workout"
tools:context=".plan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/Editworkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/WorkoutName"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/EditWeight1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight_registered"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"

            />
        <EditText
            android:id="@+id/EditExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_of_exercises"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"

            />
        <EditText
            android:id="@+id/EditTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_of_the_exercise"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"

            />

        <EditText
            android:id="@+id/EditInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instructor_s_name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20dp"
            android:layout_marginBottom="20dp"
            />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_plan"
            android:textStyle="bold|italic"
            android:textColorHighlight="@color/blue"
            android:layout_margin="15dp"
            />
        <Button
            android:id="@+id/buttonView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_history"
            android:textStyle="bold|italic"
            android:textColorHighlight="@color/blue"
            android:layout_margin="15dp"
            />
    </LinearLayout>

</ScrollView>
