<?xml version="1.0" encoding="utf-8"?>
<ScrollView
 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gyms"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:text="@string/User_Login"
            android:textColor="@color/whites"
            android:textStyle="bold|italic"
            android:textSize="25dp"
            />

        <EditText
            android:id="@+id/textFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_first_name"
            android:textColor="@color/whites"
            android:textColorHint="@color/whites"
            android:textStyle="italic|bold"
            android:layout_margin="15dp"
            />

        <EditText
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_last_name"
            android:textColor="@color/whites"
            android:textColorHint="@color/whites"
            android:textStyle="italic|bold"
            android:layout_margin="15dp"
            />

        <Button
            android:id="@+id/buttonAddUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/add_user_info"
            android:textColor="@color/reds"
            />

        <Button
            android:id="@+id/buttonLogout"
            android:text="@string/login"
            android:textStyle="italic|bold"
            android:textColor="@color/reds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textStyle="italic|bold"
            android:textColor="@color/reds"
            android:gravity="center"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            />
        <TextView
            android:id="@+id/textEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selected_language"
            android:textStyle="italic|bold"
            android:textSize="20dp"
            android:textColor="@color/whites"
            android:textAlignment="center"/>

    </LinearLayout>

</ScrollView>